--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "expo": "~37.0.3",
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.1.0",
     "react": "~16.9.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
+    "react-native-color-palette": "^2.2.0",
+    "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-navigation-actions": "^1.0.4",
     "react-native-reanimated": "~1.7.0",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
