--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-navigation-actions": "^1.0.4",
     "react-native-reanimated": "~1.7.0",
+    "react-native-router-flux": "^4.2.0",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^2.0.1"
+    "react-navigation": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
