--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~37.0.3",
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.1.0",
+    "expo-web-browser": "~8.2.1",
     "react": "~16.9.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "~16.9.0",
@@ -25,10 +26,12 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-navigation-actions": "^1.0.4",
     "react-native-reanimated": "~1.7.0",
+    "react-native-render-html": "^4.2.1",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "8.1.1",
     "react-navigation": "^2.11.2"
   },
   "devDependencies": {
