--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-color-palette": "^2.2.0",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-navigation-actions": "^1.0.4",
     "react-native-reanimated": "~1.7.0",
     "react-native-render-html": "^4.2.1",
@@ -31,6 +32,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
+    "react-native-web-swiper": "^2.1.7",
     "react-native-webview": "8.1.1",
     "react-navigation": "^2.11.2"
   },
