--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-color-palette": "^2.2.0",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-htmlview": "^0.16.0",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-navigation-actions": "^1.0.4",
     "react-native-reanimated": "~1.7.0",
